# hackmpc

./: .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
agents/: README.md  pyproject.toml
agents/app/: llm.py  main.py  montecarlo.py  policy.py  schemas.py
agents/app/graphs/: common.py  compliance.py  debate.py  fraud.py  insights.py
agents/tests/: conftest.py  test_compliance.py  test_debate.py  test_fraud.py  test_insights.py  test_llm.py  test_montecarlo.py
app/: globals.css  layout.tsx  page.tsx
components/: api-error-modal.tsx  blur-text.tsx  brim-card-icon.tsx  brim-rain.tsx  brim-wordmark.tsx  charts.tsx  hero-reveal.tsx  import-dialog.tsx  kpi-card.tsx  kpi-count.tsx  page-header.tsx  profile-menu.tsx  reveal.tsx  show-more.tsx  sidebar-nav.tsx  splat-sky.tsx  spline-sky.tsx  top-nav.tsx
data/: hackathon-brief.docx  mock-append.csv
docs/: AGENTS.md  AI.md  ARCHITECTURE.md  DATA-AND-INGEST.md  DECISIONS.md  FEATURES.md  SETUP-AND-DEPLOY.md  SOLANA.md  SUBMISSION.md
lib/: agent-service.test.ts  agent-service.ts  agent.ts  agents-fallback.test.ts  anomaly.ts  approval-debate.test.ts  approval-debate.ts  approvals.ts  auth.ts  budgets.ts  compliance-contexts.ts  compliance-swarm.test.ts  compliance-swarm.ts  compliance.ts  db.ts  forecast-mc.test.ts  forecast-mc.ts  forecast.ts  fraud-investigator.test.ts  fraud-investigator.ts  fraud.test.ts  fraud.ts  fx.ts  gemini.test.ts  gemini.ts  ingest.ts  insights-agent.ts  queries.ts  (+28 more)
(+92 files in other folders)
