[project]
name = "brim-agents"
version = "0.1.0"
description = "Brim It multi-agent orchestration sidecar (FastAPI + LangGraph)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "langgraph>=0.2.50",
    "langchain-google-genai>=2.0.7",
    "pydantic>=2.9",
    "langchain-openai>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
